--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ archives_base_name=unlockedcamera
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.83.0+1.20
 cloth_version=11.1.136
+modmenu_version=7.0.1
