--- a/gradle.properties
+++ b/gradle.properties
@@ -1,37 +1,21 @@
-# 1.18
-## Done to increase the memory available to gradle.
-#org.gradle.jvmargs=-Xmx8G
-## Fabric Properties
-## check these on https://modmuss50.me/fabric.html
-#minecraft_version=1.18.1
-#yarn_mappings=1.18.1+build.1
-#loader_version=0.16.10
-## Mod Properties
-#mod_version=0.0.3
-#maven_group=org.kr1v
-#archives_base_name=unlockedcamera
-## Dependencies
-## check this on https://modmuss50.me/fabric.html
-#fabric_version=0.44.0+1.18.1
-#cloth_version=6.5.102
-#modmenu_version=3.0.1
-#java_version=17
-
-# 1.21.1
-# Done to increase the memory available to gradle.
+# global
 org.gradle.jvmargs=-Xmx8G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.1
 loader_version=0.16.10
-# Mod Properties
 mod_version=0.0.3
 maven_group=org.kr1v
 archives_base_name=unlockedcamera
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
+java_version=17
+
+# 1.18
+#minecraft_version=1.18.1
+#yarn_mappings=1.18.1+build.1
+#fabric_version=0.44.0+1.18.1
+#cloth_version=6.5.102
+#modmenu_version=3.0.1
+
+# 1.21.1
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.1
 fabric_version=0.115.3+1.21.1
 cloth_version=15.0.140
 modmenu_version=11.0.3
-java_version=17
